@@ -10173,19 +10173,19 @@ _rti_rasterize_arg_init() {
 
 static void
 _rti_rasterize_arg_destroy(_rti_rasterize_arg arg) {
-	if (!arg->noband || !arg->numbands)
-		return;
+	if (arg->noband) {
+		if (arg->pixtype != NULL)
+			rtdealloc(arg->pixtype);
+		if (arg->init != NULL)
+			rtdealloc(arg->init);
+		if (arg->nodata != NULL)
+			rtdealloc(arg->nodata);
+		if (arg->hasnodata != NULL)
+			rtdealloc(arg->hasnodata);
+		if (arg->value != NULL)
+			rtdealloc(arg->value);
+	}
 
-	if (arg->pixtype != NULL)
-		rtdealloc(arg->pixtype);
-	if (arg->init != NULL)
-		rtdealloc(arg->init);
-	if (arg->nodata != NULL)
-		rtdealloc(arg->nodata);
-	if (arg->hasnodata != NULL)
-		rtdealloc(arg->hasnodata);
-	if (arg->value != NULL)
-		rtdealloc(arg->value);
 	if (arg->bandlist != NULL)
 		rtdealloc(arg->bandlist);
 
@@ -10231,9 +10231,9 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 	double *skew_x, double *skew_y,
 	char **options
 ) {
-	rt_raster rast;
+	rt_raster rast = NULL;
 	int i = 0;
-	int banderr = 0;
+	int err = 0;
 
 	_rti_rasterize_arg arg = NULL;
 
@@ -10255,6 +10255,9 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 	GDALDriverH _drv = NULL;
 	GDALDatasetH _ds = NULL;
 	GDALRasterBandH _band = NULL;
+
+	uint16_t _width = 0;
+	uint16_t _height = 0;
 
 	RASTER_DEBUG(3, "starting");
 
@@ -10964,21 +10967,21 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 
 	/* set bands */
 	for (i = 0; i < arg->numbands; i++) {
-		banderr = 0;
+		err = 0;
 
 		do {
 			/* add band */
 			cplerr = GDALAddBand(_ds, rt_util_pixtype_to_gdal_datatype(arg->pixtype[i]), NULL);
 			if (cplerr != CE_None) {
 				rterror("rt_raster_gdal_rasterize: Unable to add band to GDALDataset");
-				banderr = 1;
+				err = 1;
 				break;
 			}
 
 			_band = GDALGetRasterBand(_ds, i + 1);
 			if (NULL == _band) {
 				rterror("rt_raster_gdal_rasterize: Unable to get band %d from GDALDataset", i + 1);
-				banderr = 1;
+				err = 1;
 				break;
 			}
 
@@ -10988,7 +10991,7 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 				cplerr = GDALSetRasterNoDataValue(_band, arg->nodata[i]);
 				if (cplerr != CE_None) {
 					rterror("rt_raster_gdal_rasterize: Unable to set nodata value");
-					banderr = 1;
+					err = 1;
 					break;
 				}
 				RASTER_DEBUGF(4, "NODATA value set to %f", GDALGetRasterNoDataValue(_band, NULL));
@@ -10998,13 +11001,13 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 			cplerr = GDALFillRaster(_band, arg->init[i], 0);
 			if (cplerr != CE_None) {
 				rterror("rt_raster_gdal_rasterize: Unable to set initial value");
-				banderr = 1;
+				err = 1;
 				break;
 			}
 		}
 		while (0);
 
-		if (banderr) {
+		if (err) {
 			_rti_rasterize_arg_destroy(arg);
 
 			OGR_G_DestroyGeometry(src_geom);
@@ -11020,6 +11023,7 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 	arg->bandlist = (int *) rtalloc(sizeof(int) * arg->numbands);
 	for (i = 0; i < arg->numbands; i++) arg->bandlist[i] = i + 1;
 
+
 	/* burn geometry */
 	cplerr = GDALRasterizeGeometries(
 		_ds,
@@ -11030,9 +11034,10 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 		options,
 		NULL, NULL
 	);
-	_rti_rasterize_arg_destroy(arg);
 	if (cplerr != CE_None) {
 		rterror("rt_raster_gdal_rasterize: Unable to rasterize geometry");
+
+		_rti_rasterize_arg_destroy(arg);
 
 		OGR_G_DestroyGeometry(src_geom);
 		OSRDestroySpatialReference(src_sr);
@@ -11058,6 +11063,110 @@ rt_raster_gdal_rasterize(const unsigned char *wkb,
 		rterror("rt_raster_gdal_rasterize: Unable to rasterize geometry");
 		return NULL;
 	}
+
+	/* width, height */
+	_width = rt_raster_get_width(rast);
+	_height = rt_raster_get_height(rast);
+
+	/* check each band for pixtype */
+	for (i = 0; i < arg->numbands; i++) {
+		uint8_t *data = NULL;
+		rt_band band = NULL;
+		rt_band oldband = NULL;
+
+		double val = 0;
+		int nodata = 0;
+		int hasnodata = 0;
+		double nodataval = 0;
+		int x = 0;
+		int y = 0;
+
+		oldband = rt_raster_get_band(rast, i);
+		if (oldband == NULL) {
+			rterror("rt_raster_gdal_rasterize: Unable to get band %d of output raster", i);
+			_rti_rasterize_arg_destroy(arg);
+			rt_raster_destroy(rast);
+			return NULL;
+		}
+
+		/* band is of user-specified type */
+		if (rt_band_get_pixtype(oldband) == arg->pixtype[i])
+			continue;
+
+		/* hasnodata, nodataval */
+		hasnodata = rt_band_get_hasnodata_flag(oldband);
+		if (hasnodata)
+			rt_band_get_nodata(oldband, &nodataval);
+
+		/* allocate data */
+		data = rtalloc(rt_pixtype_size(arg->pixtype[i]) * _width * _height);
+		if (data == NULL) {
+			rterror("rt_raster_gdal_rasterize: Could not allocate memory for band data");
+			_rti_rasterize_arg_destroy(arg);
+			rt_raster_destroy(rast);
+			return NULL;
+		}
+		memset(data, 0, rt_pixtype_size(arg->pixtype[i]) * _width * _height);
+
+		/* create new band of correct type */
+		band = rt_band_new_inline(
+			_width, _height,
+			arg->pixtype[i],
+			hasnodata, nodataval,
+			data
+		);
+		if (band == NULL) {
+			rterror("rt_raster_gdal_rasterize: Unable to create band");
+			rtdealloc(data);
+			_rti_rasterize_arg_destroy(arg);
+			rt_raster_destroy(rast);
+			return NULL;
+		}
+
+		/* give ownership of data to band */
+		rt_band_set_ownsdata_flag(band, 1);
+
+		/* copy pixel by pixel */
+		for (x = 0; x < _width; x++) {
+			for (y = 0; y < _height; y++) {
+				err = rt_band_get_pixel(oldband, x, y, &val, &nodata);
+				if (err != 0) {
+					rterror("rt_raster_gdal_rasterize: Unable to get pixel value");
+					_rti_rasterize_arg_destroy(arg);
+					rt_raster_destroy(rast);
+					rt_band_destroy(band);
+					return NULL;
+				}
+
+				if (nodata)
+					val = nodataval;
+
+				err = rt_band_set_pixel(band, x, y, val);
+				if (err < 0) {
+					rterror("rt_raster_gdal_rasterize: Unable to set pixel value");
+					_rti_rasterize_arg_destroy(arg);
+					rt_raster_destroy(rast);
+					rt_band_destroy(band);
+					return NULL;
+				}
+			}
+		}
+
+		/* replace band */
+		oldband = rt_raster_replace_band(rast, band, i);
+		if (oldband == NULL) {
+			rterror("rt_raster_gdal_rasterize: Unable to replace band %d of output raster", i);
+			_rti_rasterize_arg_destroy(arg);
+			rt_raster_destroy(rast);
+			rt_band_destroy(band);
+			return NULL;
+		}
+
+		/* free oldband */
+		rt_band_destroy(oldband);
+	}
+
+	_rti_rasterize_arg_destroy(arg);
 
 	RASTER_DEBUG(3, "done");
 
